--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -14,6 +15,10 @@ code {
 
 
 /*  *********profile********* */
+.input-error {
+  border: 2px solid red;
+}
+
 
 body {
   font-family: Open Sans, sans-serif;
