--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -12749,3 +12749,22 @@ footer.style2 .social-area ul li:hover a i {
   padding-right: 30px;
   margin-top: 25px;
 }/*# sourceMappingURL=style.css.map */
+ 
+.smallCardPet{
+  width: 113px;
+  height: 132px;
+  object-fit: contain;
+}
+.bigCardPet{
+  width: 720px;
+  height: 700px;
+  object-fit: contain;
+}
+/* .bigCardPet:hover{
+  width: 100%;
+  height: 100%;
+} */
+.responsiveImg{
+  width: 90%;
+  height: 604px;
+}
