--- a/src/Components/User/profile.css
+++ b/src/Components/User/profile.css
@@ -1058,19 +1058,19 @@ button.bg-white:focus {
 
 .rounded-circle {
   width: 200px; /* ajustez la taille selon vos besoins */
-  height: 150px;
+  /* height: 150px; */
   object-fit: cover; /* redimensionne l'image pour s'adapter à la forme de cercle */
   border-radius: 50%;
-
+  border: solid 10px #FF6B55;
 }
 
 .d-none {
   display: none !important;
 }
 
-/* .d-flex {
-  display: flex !important; // to fixx err navbar
-} */
+.d-flex {
+  display: flex !important;
+}
 
 @media (min-width: 768px) {
 
@@ -1331,12 +1331,10 @@ button.bg-white:focus {
 }
 
 .bg-gradient-default {
-  background: linear-gradient(87deg, #172b4d 0, #1a174d 100%) !important;
+  background: linear-gradient(87deg, #FF6B55 0, #15212d 150%) !important;
 }
 
-.bg-gradient-default {
-  background: linear-gradient(87deg, #172b4d 0, #1a174d 100%) !important;
-}
+
 
 @keyframes floating-lg {
   0% {
@@ -1559,14 +1557,14 @@ a.text-white:focus {
   vertical-align: -17%;
 }
 
-/* .dropdown-header {
+.dropdown-header {
   font-size: .625rem;
   font-weight: 700;
   padding-right: 1rem;
   padding-left: 1rem;
   text-transform: uppercase;
   color: #f6f9fc;
-} */
+}
 
 .dropdown-menu a.media>div:first-child {
   line-height: 1;
@@ -1975,4 +1973,67 @@ p {
 
 #navbar .navbar {
   margin-bottom: 20px;
+}
+
+button{
+  margin: 10px;
+}
+
+.prof{
+  display: flex;
+  justify-content: space-around;
+}
+
+hr.new1 {
+  border-top: 3px solid #FF6B55;
+  background: transparent !important;
+}
+
+#petGallery{
+  position: relative;
+  width: 50%;
+  min-height: 1px;
+  padding-right: 15px;
+  padding-left: 15px;
+  /* border: solid #FF6B55 3px; */
+  
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 60px;
+  object-fit: contain;
+}
+#petGallery img{
+  /* border: solid blue 2px; */
+  padding: 0;
+  margin: 0;
+  display: block;
+}
+.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
+  color: #fff;
+  background-color: #FF6B55;
+  padding: 5px;
+}
+.nav-pills .nav-link.active, .nav-pills .show>.nav-link img{
+  
+}
+#petGallery-container{
+  width: 100%;
+  height: 100%;
+  /* border: solid red 10px; */
+  display:flex;
+  justify-content: center;
+  object-fit: contain;
+}
+
+.tab-content>.active {
+  display: inline;
+  /* border: solid green 2px; */
+}
+
+.bigCardPet {
+  width: auto !;
+  height: 90%;
+  object-fit: contain;
 }
