--- a/src/Loading.css
+++ b/src/Loading.css
@@ -11,9 +11,7 @@
     top: 20px;
     left: 20px;
     border-radius: 50%;
-
-    box-shadow: 0 4px 0 0 #f37d0e;
-
+    box-shadow: 0 4px 0 0 #dc410d;
     transform-origin: 80px 82px;
   }
   .loadingio-eclipse {
